# CRUD-Controle-de-Estoque

./: .env  .project  Dockerfile  LICENSE  README.md  backlog.md  check.sh  class_diagram.txt  docker-compose.yml  prepare.sh  start.sh  stop.sh
.github/workflows/: ci.yml  publish.yml
ControleDeEstoque/JavaDoc/: allclasses-index.html  allpackages-index.html  element-list  help-doc.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  search.html  type-search-index.js
ControleDeEstoque/JavaDoc/Controle/: ControleEstoque.html  package-summary.html  package-tree.html  package-use.html
ControleDeEstoque/JavaDoc/Controle/class-use/: ControleEstoque.html
ControleDeEstoque/JavaDoc/Modelo/: Eletronico.html  Empresa.html  Estoque.html  Filial.html  Item.html  Movel.html  package-summary.html  package-tree.html  package-use.html
ControleDeEstoque/JavaDoc/Modelo/class-use/: Eletronico.html  Empresa.html  Estoque.html  Filial.html  Item.html  Movel.html
ControleDeEstoque/JavaDoc/Visão/: Principal.html  TelaEstoqueEletronico.html  TelaEstoqueMoveis.html  package-summary.html  package-tree.html  package-use.html
ControleDeEstoque/JavaDoc/Visão/class-use/: Principal.html  TelaEstoqueEletronico.html  TelaEstoqueMoveis.html
ControleDeEstoque/JavaDoc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
ControleDeEstoque/src/: ControleDeEstoqueTest.java  EstoqueTest.java
ControleDeEstoque/src/Controle/: ControleEstoque.java
ControleDeEstoque/src/Modelo/: Eletronico.java  Empresa.java  Estoque.java  Filial.java  Item.java  Movel.java
ControleDeEstoque/src/Visão/: Principal.java  TelaEstoqueEletronico.java  TelaEstoqueMoveis.java
stock-manager/: .env.template  .gitignore  Cargo.toml  Dockerfile  Dockerfile.multiarch  docker-compose.yml  init.sql  rustfmt.toml  seed.sh  seed.sql
stock-manager/crates/api-server/: Cargo.toml
stock-manager/crates/api-server/src/: dtos.rs  handlers.rs  main.rs
stock-manager/crates/application/: Cargo.toml
stock-manager/crates/application/src/: lib.rs
stock-manager/crates/application/src/services/: auth_service.rs  category_service.rs  mod.rs  product_service.rs  stock_item_service.rs  stock_transaction_service.rs  warehouse_service.rs
stock-manager/crates/cli/: Cargo.toml
stock-manager/crates/cli/.sqlx/: query-075d8483c35b9d79fb4907f387979022c783f9b74a2b227e1dbc1b00ada05a97.json  query-82746e921edfb33ae6c0f434d96ce74e0de9dc8e24ae1d9fa945b9924498a652.json  query-a5128a85b209f52a9189cb8b1190166e14dd70be1da12b75572167aa31534776.json  query-cf5d0b529a9e0451a850bf7c72310f884196c2e11395b4e51fe0048a333bc8cf.json
stock-manager/crates/cli/src/: lib.rs  main.rs
stock-manager/crates/cli/src/commands/: mod.rs  user_create.rs  user_delete.rs  user_list.rs  user_password.rs  user_show.rs  user_update.rs  utils.rs
stock-manager/crates/domain/: Cargo.toml
stock-manager/crates/domain/src/: errors.rs  lib.rs  models.rs  repositories.rs
stock-manager/crates/domain/src/entities/: category.rs  mod.rs  product.rs  stock_item.rs  stock_transaction.rs  user.rs  warehouse.rs
stock-manager/crates/domain/src/repositories/: category_repository.rs  mod.rs  product_repository.rs  stock_item_repository.rs  stock_transaction_repository.rs  user_repository.rs  warehouse_repository.rs
stock-manager/crates/infrastructure/: Cargo.toml
stock-manager/crates/infrastructure/.sqlx/: query-51848e8e05b84950bc79c694ee53df4b62b9dbdee2c1726a175bf24e6e2c4a46.json  query-7c69e6ffbc40ac9733be65f5d165563dff00d1174674aca275017f6828ee5097.json  query-ce862fae43951337b8b3ca50a8b4d16eabe3f15346c12b80ea97b46c802fa0a6.json  query-e190d78edd9f627ffbdce7aca0666b4ad1703e8e84f4ecf9140a9af74392576a.json
stock-manager/crates/infrastructure/src/: db.rs  lib.rs  schema.rs
stock-manager/crates/infrastructure/src/models/: category.rs  product.rs  stock_item.rs  stock_transaction.rs  user.rs  warehouse.rs
stock-manager/crates/infrastructure/src/repositories/: category_repository.rs  mod.rs  product_repository.rs  stock_item_repository.rs  stock_repository.rs  stock_transaction_repository.rs  user_repository.rs  warehouse_repository.rs
stock-manager/crates/web-server/: Cargo.toml  build.rs
stock-manager/crates/web-server/src/: filters.rs  handlers.rs  lib.rs  main.rs  static_assets.rs
stock-manager/crates/web-server/src/dtos/: auth.rs  category.rs  dashboard.rs  mod.rs  product.rs  stock_item.rs  stock_transaction.rs  warehouse.rs
stock-manager/crates/web-server/src/handlers/: auth.rs  category.rs  dashboard.rs  mod.rs  product.rs  stock_item.rs  stock_transaction.rs  warehouse.rs
stock-manager/crates/web-server/src/middleware/: auth.rs
stock-manager/crates/web-server/src/services/: mod.rs  notification_listener.rs  token_blacklist.rs
stock-manager/crates/web-server/templates/: index.html  layout.html
stock-manager/crates/web-server/templates/auth/: login.html  register.html
stock-manager/crates/web-server/templates/categories/: form.html  index.html
stock-manager/crates/web-server/templates/products/: form.html  index.html  table_rows.html
stock-manager/crates/web-server/templates/stock/: form.html  index.html
stock-manager/crates/web-server/templates/stock_items/: form.html  index.html  table_rows.html  transaction_form.html
stock-manager/crates/web-server/templates/transactions/: index.html  table_rows.html
stock-manager/crates/web-server/templates/warehouses/: form.html  index.html
stock-manager/crates/web-server/tests/: database_tests.rs  end_to_end_tests.rs  integration_tests.rs  mod.rs  test_utils.rs
