[workspace]
resolver = "3"
members = [
  "crates/api-server",
  "crates/application",
  "crates/cli",
  "crates/domain",
  "crates/infrastructure",
  "crates/web-server",
]

[workspace.dependencies]
actix-files = "0.6"
actix-rt = "2.10"
actix-web = "4.10"
anyhow = "1.0"
askama = "0.14"
askama_actix = "0.14"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
diesel = { version = "2.2", features = ["postgres", "uuid", "chrono", "numeric", "r2d2"] }
diesel_migrations = "2.2"
dotenv = "0.15.0"
rust-embed = "8.7"
rust_decimal = { version = "1.37", features = ["serde", "db-diesel-postgres"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
jsonwebtoken = "9.3"
futures-util = "0.3"
