[package]
name = "stock-api-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-rt = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
diesel = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
stock-application = { path = "../application" }
stock-domain = { path = "../domain" }
stock-infrastructure = { path = "../infrastructure" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
