[package]
name = "stock-application"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
stock-domain = { path = "../domain" }
tracing = { workspace = true }
uuid = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
diesel = { workspace = true }
