[package]
name = "stock-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "stock-cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
comfy-table = "7.1"
dialoguer = "0.11"
diesel = { workspace = true }
dotenv = "0.15.0"
serde_json = "1.0"
stock-application = { path = "../application" }
stock-domain = { path = "../domain" }
stock-infrastructure = { path = "../infrastructure" }
tokio = { workspace = true }
uuid = { workspace = true }
