[package]
name = "stock-infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
stock-domain = { path = "../domain" }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
