[package]
name = "stock-web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = { workspace = true }
actix-rt = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
askama = { workspace = true }
askama_actix = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true }
dotenv = { workspace = true }
futures-util = { workspace = true }
jsonwebtoken = { workspace = true }
rust-embed = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
stock-application = { path = "../application" }
stock-domain = { path = "../domain" }
stock-infrastructure = { path = "../infrastructure" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
# LISTEN/NOTIFY and token blacklist
tokio = { workspace = true }
tokio-postgres = "0.7"
futures-channel = "0.3"
dashmap = "6.1"

[dev-dependencies]
serde_json = "1.0"
tokio = { workspace = true }
tokio-test = "0.4"
urlencoding = "2.1"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[[test]]
name = "end_to_end_tests"
path = "tests/end_to_end_tests.rs"

[[test]]
name = "database_tests"
path = "tests/database_tests.rs"
